--- a/Validform/index.html
+++ b/Validform/index.html
@@ -9,6 +9,39 @@
 </head>
 
 <body>
+   <form id="form" action="#" method="POST">
+      <label>Разработчики:<input type="text" id="man" name="article"></label><span id="manErr"
+         style="color:red"></span><br>
+      <label>Название сайта:<input type="text" id="name" name="article"></label><span id="nameErr"
+         style="color:red"></span><br>
+      <label>URL сайта:<input type="text" id="url" name="article"></label><span id="urlErr"
+         style="color:red"></span><br>
+      <label>Дата запуска сайта:<input type="date" id="date" name="article"></label><span id="dateErr"
+         style="color:red"></span><br>
+      <label>Посетителей в сутки:<input type="text" id="visitor" name="article"></label><span id="visitorErr"
+         style="color:red"></span><br>
+      <label>E-mail для связи<input type="text" id="mail" name="article"></label><span id="mailErr"
+         style="color:red"></span><br>
+      <label>Рубрика каталога:</label>
+      <select name="cap">
+         <option value="1">бытовая техника</option>
+         <option value="2">здоровье</option>
+         <option value="3">домашний уют</option>
+      </select><br>
+      <label>Размещение:</label>
+      <input type="radio" id="radio" name="answer" value="1"> бесплатное
+      <input type="radio" id="radio" name="answer" value="2"> платное
+      <input type="radio" id="radio" name="answer" value="3"> VIP <br>
+      <label>Разрешить отзывы:</label><input type="checkbox" name="allow" id="check"><span id="checkErr"
+         style="color:red"></span><br>
+      Описание сайта:<br>
+      <textarea name="text" id="text"></textarea><span id="textErr" style="color:red"></span><br>
+      <input type="submit" value="Опубликовать">
+   </form>
+
+
+
+
    <script src="script.js"></script>
 </body>
 
