add function selectValid

--- a/Validform/index.html
+++ b/Validform/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-   <form id="form" action="#" method="POST">
+   <form id="form" action="https://fe.it-academy.by/TestForm.php" method="POST">
       <label>Разработчики:<input type="text" id="man" name="article"></label><span id="manErr"
          style="color:red"></span><br>
       <label>Название сайта:<input type="text" id="name" name="article"></label><span id="nameErr"
@@ -24,9 +24,10 @@
          style="color:red"></span><br>
       <label>Рубрика каталога:</label>
       <select name="cap" id="select">
-         <option value="1" id="option">бытовая техника</option>
-         <option value="2" id="option">здоровье</option>
-         <option value="3" id="option">домашний уют</option>
+         <option id="option"></option>
+         <option id="option">бытовая техника</option>
+         <option id="option">здоровье</option>
+         <option id="option">домашний уют</option>
       </select><span id="selectErr" style="color:red"></span><br>
       <div id="div">
          <label>Размещение:</label>
