add pands and time

--- a/ClockDom/index.html
+++ b/ClockDom/index.html
@@ -15,7 +15,7 @@
       <input id="button" type="button" value="Построить часы"
          style="height: 25px;background-color: aqua; border-radius: 3px;"></input>
    </div>
-
+   <div id="clock"></div>
    <script src="script.js"></script>
 </body>
 
