--- a/ClockSVG/index.html
+++ b/ClockSVG/index.html
@@ -17,7 +17,33 @@
    </div>
    <svg id="yellow">
       <circle id="circleyellow" />
-
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <circle id="circlegreen" />
+      <text id="textgreen"></text>
+      <line id="hour" />
+      <line id="minute" />
+      <line id="second" />
    </svg>
    <div id="clock"></div>
    <script src="script.js"></script>
